# yt_dl_site

./: README.md  config.example.json  main.py  pyproject.toml  yt_dl_site.service
static/: style.css
templates/: base.html  index.html  save.html
